<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statuss"
            android:id="@+id/status"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricee"
            android:id="@+id/price"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/datee"
            android:layout_weight="1"
            android:id="@+id/date"/>


    </LinearLayout>


</LinearLayout>